Sun Aug 22 16:26:01 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* performance-tests/Protocols/Receiver/Receiver.mpc:

	  Fixed a compile error in our daily builds.

Fri Aug 20 16:01:55 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
        
          Fixed typo in source file name.

Fri Aug 20 10:39:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/Container_Base.h:
          Fixed compile errors

Fri Aug 20 07:32:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Container_Base.h:
          Fixed compile errors

Thu Aug 19 17:13:22 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added code generation for the set_attributes() method called
          on the servant by the deployer.

Thu Aug 19 16:09:45 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/Container_Base.h:
	* ciao/Container_Base.h:

	  Fixed a compilation error reported by  Roland Schimmack <Roland
	  dot Schimmack at gmx dot de>

Thu Aug 19 08:44:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * PROBLEM-REPORT-FORM:
          Ask for the default.features file used by MPC.

Wed Aug 18 14:21:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeDaemon_Impl.h:
          Added missing pragma pop

Tue Aug 17 14:29:00 2004  Jules White <jules@dre.vanderbilt.edu>

        * CIAO/ciao/Servant_Impl_Base.h:
        * CIAO/ciao/Servant_Impl_Base.cpp:
          Added a method to create and return the StandardConfigurator for a component.
          Overrided _default_POA so that it returns the POA of the servant's container.

        * CIAO/ciao/StandardConfigurator_Impl.h: